Update extension from .yaml to .yml

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* 2017-09: Version 0.1.3
+* Change the default configuration file format to be YAML. A default file 
+  'stubby.yml' will be installed. The JSON dict format is still supported when
+   specifying a custom configuration file on the command line.
+* Add a -v flag to let users specify the logging level they want to see
+
 * 2017-08-24: Version 0.1.2
   * revert logging to stderr until we have good separation of logging and error
     within the code
