--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@ Jim Hague <jim@sinodun.com>
 Allison Mankin <amankin@verisign.com>
 Melinda Shore <melinda.shore@nomountain.net>
 John Dickinson <jad@sinodun.com>
+Tom Pusateri <pusateri@bangj.com>
+
+Also, many thanks to the NLnet Foundation for a grant to support this work.
