--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 * 201?-??-??: Version 0.1.?
+  * Bugfix #48: Do not do native DNSSEC validation when cd bit was
+    received (for example from an unbound forwarder), but DNSSEC
+    validation was not enabled in the first place.
   * Bugfix getdnsapi/getdns#358: Parse config files given with the
     -C option that have an .yaml extension as YAML not JSON.
     Thanks Ollivier Robert
