--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2017-12-18: Version 0.2.1
+ * Fix use of logging on macos 10.11
+
 * 2017-12-18: Version 0.2.0
  * Add Powershell scripts for Windows 7 that will update the IPv4 DNS resolvers.
  * Add Windows scripts to enable a Scheduled task for stubby
