--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    and include a "appdata_dir" directory in stubby.yml.example
  * Update securedns.eu entries in stubby.yml.example
  * Added Cloudflare servers in stubby.yml.example
+ * Added basic upstart script in contrib/upstart dir. Thanks vapniks
 
 * 2018-02-21: Version 0.2.2
  * Fixes and updates to the stubby.yml.config file. Add separate entries for
