Credit the right people for the systemd work

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 * 2018-05-??: Version 0.2.3
- * With systemd setups, make /run/stubby directory writeable for stubby user
-   and include a "appdata_dir" directory in stubby.yml.example
+ * Bugfix #62 and #106: With systemd setups, make /run/stubby directory
+   writeable for stubby user and include a "appdata_dir" directory
+   in stubby.yml.example.
+   Thanks Paul Wouters, eccgecko and Han Vinke
  * Update securedns.eu entries in stubby.yml.example
  * Added Cloudflare servers in stubby.yml.example
  * Added basic upstart script in contrib/upstart dir. Thanks vapniks
