--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* 2020-01-16: Version 0.3.0rc1
+  * Correct the applied-privacy.net details and remove ibksturm server in stubby.yml.example.
+  * Include AppArmor profile (thanks CameronNemo)
+  * Add `contrib` contributors to the README
+  * Let scheduled task run idefinately on Windows (thanks triatic)
+
 * 2019-12-20: Version 0.3.0-beta.1
   * Migration of build system to cmake.
 
