Add restart=on-failure to systemd.service file

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
   * Include AppArmor profile (thanks CameronNemo)
   * Add `contrib` contributors to the README
   * Let scheduled task run idefinately on Windows (thanks triatic)
+  * Add `Restart=on-failure` to the systemd.service file (thanks appliedprivacy)
 
 * 2019-12-20: Version 0.3.0-beta.1
   * Migration of build system to cmake.
