--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-* 2020-04-  : Version 0.3.1
-  * Remove the secure.eu entries in the stubby config file as the service is shutting down
-    as of 30th April
+*2020- : Version 0.4.0
+  * Add ability to run Stubby as a full Windows service
+  * Update IPs for dot1.applied-privacy.net
+  * Remove the secure.eu entries in the stubby config file
+  * Bugfix: Make `run_in_foreground = 1` the default again
 
 * 2020-02-28: Version 0.3.0
   * Correct the applied-privacy.net details and remove ibksturm server in stubby.yml.example.
