--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+* 2022-06-: Version 0.4.1
+  * Several updates to the servers in the config file:
+     * Change `comment` lines on Uncensored server data to more clearly be comments
+       (not valid YAML)
+     * Fix and improve descriptions of default values
+  * Fixes for parsing of quoted key values for `tls-ca-file`, `tls-curves-list`
+    and `resolvconf`
+  * Add Docker file into `contrib` - thanks to pataquets.
+
 * 2021-06-04: Version 0.4.0
   * We announce the intention to remove the dnsovertls*.sinodun.com 
     servers from the default resolver list in the next release,
