Category: Strengthen check for LibIDN2 version in cmake build step

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* 2022-07-20:
+
+  * Strengthen version checking for LibIDN2 during the cmake step so LibIDN2
+    version 2.3.3 can be properly found.
+
 * 2022-06-: Version 0.4.1
   * Several updates to the servers in the config file:
      * Change `comment` lines on Uncensored server data to more clearly be comments
