--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
   * Strengthen version checking for LibIDN2 during the cmake step so LibIDN2
     version 2.3.3 can be properly found (thanks jpbion).
   * Updated systemd/stubby.service file. Thanks Bruno Pagani
+  * log level configurable in config file with log_level setting
+    Command line setting (with -v or -l) overrules the config file setting
 
 * 2021-06-04: Version 0.4.0
   * We announce the intention to remove the dnsovertls*.sinodun.com 
