--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* 2022-12-22: version 0.4.3
+  * Fix Issue #330: PrivateUsers=false needed in systemd
+    stubby.service file for stubby to start.
+
 * 2022-08-19: version 0.4.2
   * Fix Issue #320: Stubby doesn't start without "log_level"
     entry. Thanks Johnny S. Lee
